# visionary_ai

./: .gitignore  README.md  package-lock.json
.github/workflows/: ci.yml
backend/: .env.example  fly.toml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py  vision.py  websocket.py
backend/app/api/routes/: realtime.py  system.py  vision.py
backend/app/core/: config.py  errors.py  exception_handlers.py  lifecycle.py  state.py
backend/app/integrations/: openai_vision_client.py
backend/app/schemas/: live.py  system.py  vision.py
backend/app/services/: behavior_engine.py  cognitive_pipeline.py  live_stream_service.py  reaction_engine.py  state_engine.py  storage_service.py  stream_service.py  streaming_service.py  temporal_memory.py  vision_agent_service.py  vision_service.py  yolo_service.py
backend/tests/: test_cognitive_pipeline.py  test_health.py  test_live_endpoints.py  test_realtime.py  test_system_status.py  test_vision_routes.py
docker/: backend.Dockerfile  docker-compose.yml
docs/: DEPLOYMENT_RUNBOOK.md  PHASE5_COMPLETION.md  PHASE6.md  RELEASE_CHECKLIST.md
frontend/: tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/contact/: page.tsx
frontend/components/: AgentStreamPanel.tsx  BoundingBoxOverlay.tsx  WebcamStream.tsx
frontend/components/home/: faq.tsx  (+7 more)
frontend/lib/: ai-client.ts  site.ts
frontend/tests/: agent-studio.test.tsx  bounding-box-overlay.test.tsx  live-agent-feed.test.tsx  live-vision-lab.test.tsx
frontend/types/: spline-viewer.d.ts
(+5 files in other folders)
